New Crowdin updates (#656)
* New translations strings.xml (Japanese)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Belarusian)

* New translations strings.xml (Bulgarian)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (German)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Irish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Korean)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Punjabi)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Galician)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Indonesian)

* New translations strings.xml (Bengali)

* New translations strings.xml (Croatian)

* New translations strings.xml (Norwegian Nynorsk)

* New translations strings.xml (Hindi)

* New translations strings.xml (Odia)

* New translations strings.xml (Nepali)

* New translations strings.xml (Russian, Belarus)

* New translations strings.xml (Turkish)

* New tr

--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -287,41 +287,79 @@
     <string name="date_header">Formatos de Fecha</string>
     <string name="date_header_summary">Establece tus propios formatos de fecha personalizados</string>
     <string name="launch_on_library">Ejecutar en la biblioteca</string>
-    <string name="categories">Categories</string>
-    <string name="classified_media">%1$s classified media</string>
-    <string name="scan_for_new_categories">Scan for new categories</string>
-    <string name="scanning_media">Scanning media...</string>
-    <string name="date_header_title">Date Header</string>
-    <string name="media_view">Media View</string>
-    <string name="exif_date">Exif Date</string>
-    <string name="media_info">Media Info</string>
-    <string name="weekly_date">Weekly Date</string>
-    <string name="media_grid">Media Grid</string>
-    <string name="classic_date">Classic Date</string>
-    <string name="extended_date">Extended Date</string>
-    <string name="auto_play_video">Video Auto-Play</string>
-    <string name="auto_play_video_summary">Play the video automatically while viewing media</string>
-    <string name="shared_elements">Animate media items</string>
-    <string name="shared_elements_summary">Animate media items click/return using shared elements transitions</string>
+    <string name="categories">Categorías</string>
+    <string name="classified_media">%1$s medios clasificados</string>
+    <string name="scan_for_new_categories">Escanear nuevas categorías</string>
+    <string name="scanning_media">Escaneando medios...</string>
+    <string name="date_header_title">Fecha Encabezado</string>
+    <string name="media_view">Vista multimedia</string>
+    <string name="exif_date">Fecha Exif</string>
+    <string name="media_info">Información multimedia</string>
+    <string name="weekly_date">Fecha semanal</string>
+    <string name="media_grid">Cuadrícula multimedia</string>
+    <string name="classic_date">Fecha clásica</string>
+    <string name="extended_date">Fecha ampliada</string>
+    <string name="auto_play_video">Reproducción automática de vídeo</string>
+    <string name="auto_play_video_summary">Reproducir el vídeo automáticamente mientras se visualiza multimedia</string>
+    <string name="shared_elements">Animar elementos multimedia</string>
+    <string name="shared_elements_summary">Animación de elementos multimedia clic/retorno mediante transiciones de elementos compartidos</string>
     <string name="type_stylus">Stylus</string>
-    <string name="type_highlighter">Highlighter</string>
-    <string name="type_marker">Marker</string>
-    <string name="type_erase">Eraser</string>
-    <string name="crop">Crop</string>
-    <string name="adjust">Adjust</string>
-    <string name="filters">Filters</string>
-    <string name="markup">Markup</string>
-    <string name="type_size">Size</string>
-    <string name="encrypting_media">Encrypting media...</string>
-    <string name="decrypt_vault">Decrypt Vault</string>
-    <string name="restore_vault_summary">The current vault and its content will be decrypted and restored.\nThis action will make your content accessible again in the Gallery.</string>
-    <string name="restore_vault_title">Confirm Decryption?</string>
-    <string name="yes">Yes</string>
-    <string name="vault_deletion_title">Confirm Deletion?</string>
+    <string name="type_highlighter">Resaltar</string>
+    <string name="type_marker">Marcador</string>
+    <string name="type_erase">Borrador</string>
+    <string name="crop">Recortar</string>
+    <string name="adjust">Ajustar</string>
+    <string name="filters">Filtros</string>
+    <string name="markup">Margen</string>
+    <string name="type_size">Tamaño</string>
+    <string name="encrypting_media">Cifrando medios...</string>
+    <string name="decrypt_vault">Descifrar bóveda</string>
+    <string name="restore_vault_summary">La bóveda actual y su contenido se descifrarán y restaurarán.\nEsta acción hará que tu contenido vuelva a ser accesible en la Galería.</string>
+    <string name="restore_vault_title">¿Confirmar descifrado?</string>
+    <string name="yes">Sí</string>
+    <string name="vault_deletion_title">¿Confirmar eliminación?</string>
     <string name="vault_deletion_summary">The current vault and its content will be deleted permanently.\nThis action cannot be undone.</string>
-    <string name="create_new_vault_title">Create new vault?</string>
+    <string name="create_new_vault_title">¿Crear nueva bóveda?</string>
     <string name="create_new_vault_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
     <string name="select_a_vault">Select a vault</string>
+    <string name="taken_on">Taken on</string>
+    <string name="resolution">Resolución</string>
+    <string name="dimensions">Dimensiones</string>
+    <string name="duration">Duración</string>
+    <string name="frame_rate">Taza de refresco</string>
+    <string name="bitrate">Bitrate</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s MP</string>
+    <string name="ppi">PPI</string>
+    <string name="ppcm">PPCM</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">" at %1$s"</string>
+    <string name="video_fps">%.1f fps</string>
+    <string name="collecting_metadata">Collecting metadata...</string>
+    <string name="database">Database</string>
+    <string name="refresh_metadata">Refresh Metadata</string>
+    <string name="refresh_metadata_summary">If something feels wrong, refresh all stored media metadata</string>
+    <string name="metadata_refresh_toast">Refreshing metadata...</string>
+    <string name="change_thumbnail">Change album cover</string>
+    <string name="delete_thumbnail">Remove custom album cover</string>
+    <string name="settings_theme">Themes</string>
+    <string name="settings_theme_summary">Customise your media gallery</string>
+    <string name="customization_summary">Optmise the app to your own preferences</string>
+    <string name="settings_misc">Miscellaneous</string>
+    <string name="settings_misc_summary">Various uncategorised settings</string>
+    <string name="settings_general_summary">Various general settings</string>
+    <string name="ai_category_summary">Control what Smart Features you want to use</string>
+    <string name="video_playback">Video Playback</string>
+    <string name="interface_settings">Interface</string>
+    <string name="show_date_header">Show Media Date Header</string>
+    <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
+    <string name="show_selection_titles">Display Selection Item\'s Title</string>
+    <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
+    <string name="extended_date_header_title">Extended Date Header</string>
+    <string name="clear_selection">Remove All</string>
+    <string name="selfies">Selfies</string>
+    <string name="screenshots">Screenshots</string>
+    <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
+    <string name="suggestions">Suggestions</string>
     <plurals name="item_count">
         <item quantity="one">%s Ítem</item>
         <item quantity="other">%s Ítems</item>
