--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_albums">Albums</string>
+    <string name="app_name">गैलरी</string>
+    <string name="nav_albums">एल्बम</string>
     <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
+    <string name="header_today">आज</string>
+    <string name="header_yesterday">बीता हुआ कल</string>
     <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
+    <string name="filter">छांटे</string>
+    <string name="filter_recent">हाल ही में</string>
+    <string name="filter_nameAZ">नाम (A-Z)</string>
+    <string name="filter_nameZA">नाम (A-Z)</string>
+    <string name="filter_old">पुराना</string>
     <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
+    <string name="trash">बेकार फ़ाइलें</string>
+    <string name="pause_video">वीडियो रोकें</string>
+    <string name="play_video">वीडियो चलाएं</string>
+    <string name="favorites">पसंदीदा</string>
     <string name="no_media_title">Seems empty here</string>
     <string name="no_media_cd">No media found</string>
     <string name="empty_trash_title">Squeaky Clean</string>
@@ -23,14 +23,14 @@
     <string name="error_title">Something went wrong :(</string>
     <string name="error_cd">An error occurred</string>
     <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="share">Share</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
+    <string name="trash_restore">पहले जैसा करें</string>
+    <string name="trash_empty">खाली</string>
+    <string name="trash_delete">हटाएं</string>
+    <string name="share">साझा करें</string>
+    <string name="remove_selected">चुने हुए को हटाएँ</string>
+    <string name="remove_all">सभी हटाएँ</string>
     <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
+    <string name="label">लेबल</string>
     <string name="path">Path</string>
     <string name="iso">ISO</string>
     <string name="kb">KB</string>
@@ -40,16 +40,16 @@
     <string name="select_all">Select all</string>
     <string name="unselect_all">Unselect all</string>
     <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="settings_general">General</string>
+    <string name="back_cd">पीछे</string>
+    <string name="settings_title">सेटिंग्स</string>
+    <string name="settings_general">सामान्य</string>
     <string name="settings_trash_title">Use trash can</string>
     <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
     <string name="move_album_to_trash">Move album to trash</string>
     <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
+    <string name="unpin">अनपिन</string>
+    <string name="pin">पिन</string>
+    <string name="nav_timeline">समयरेखा</string>
     <string name="location_cd">Media Location</string>
     <string name="location_map_cd">Location Map</string>
     <string name="app_dev">by %s</string>
@@ -322,6 +322,44 @@
     <string name="create_new_vault_title">Create new vault?</string>
     <string name="create_new_vault_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
     <string name="select_a_vault">Select a vault</string>
+    <string name="taken_on">Taken on</string>
+    <string name="resolution">Resolution</string>
+    <string name="dimensions">Dimensions</string>
+    <string name="duration">Duration</string>
+    <string name="frame_rate">Frame Rate</string>
+    <string name="bitrate">Bitrate</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s MP</string>
+    <string name="ppi">PPI</string>
+    <string name="ppcm">PPCM</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">" at %1$s"</string>
+    <string name="video_fps">%.1f fps</string>
+    <string name="collecting_metadata">Collecting metadata...</string>
+    <string name="database">Database</string>
+    <string name="refresh_metadata">Refresh Metadata</string>
+    <string name="refresh_metadata_summary">If something feels wrong, refresh all stored media metadata</string>
+    <string name="metadata_refresh_toast">Refreshing metadata...</string>
+    <string name="change_thumbnail">Change album cover</string>
+    <string name="delete_thumbnail">Remove custom album cover</string>
+    <string name="settings_theme">Themes</string>
+    <string name="settings_theme_summary">Customise your media gallery</string>
+    <string name="customization_summary">Optmise the app to your own preferences</string>
+    <string name="settings_misc">Miscellaneous</string>
+    <string name="settings_misc_summary">Various uncategorised settings</string>
+    <string name="settings_general_summary">Various general settings</string>
+    <string name="ai_category_summary">Control what Smart Features you want to use</string>
+    <string name="video_playback">Video Playback</string>
+    <string name="interface_settings">Interface</string>
+    <string name="show_date_header">Show Media Date Header</string>
+    <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
+    <string name="show_selection_titles">Display Selection Item\'s Title</string>
+    <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
+    <string name="extended_date_header_title">Extended Date Header</string>
+    <string name="clear_selection">Remove All</string>
+    <string name="selfies">Selfies</string>
+    <string name="screenshots">Screenshots</string>
+    <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
+    <string name="suggestions">Suggestions</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
