--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -322,6 +322,44 @@
     <string name="create_new_vault_title">Создать новый сейф?</string>
     <string name="create_new_vault_summary">Доступ к сейфу будет осуществляться с использованием мер безопасности вашего телефона (пароль или биометрические данные)\n\nКлюч шифрования доступен внутри хранилища и будет использоваться для восстановления любых сейфов.</string>
     <string name="select_a_vault">Выберите сейф</string>
+    <string name="taken_on">Дата съёмки</string>
+    <string name="resolution">Разрешение</string>
+    <string name="dimensions">Соотношение сторон</string>
+    <string name="duration">Длительность</string>
+    <string name="frame_rate">Частота кадров</string>
+    <string name="bitrate">Битрейт</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s МП</string>
+    <string name="ppi">PPI</string>
+    <string name="ppcm">PPCM</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">" at %1$s"</string>
+    <string name="video_fps">%.1f фпс</string>
+    <string name="collecting_metadata">Сбор метаданных...</string>
+    <string name="database">База данных</string>
+    <string name="refresh_metadata">Обновить метаданные</string>
+    <string name="refresh_metadata_summary">Если что-то не так, обновите все сохраненные метаданные мультимедиа</string>
+    <string name="metadata_refresh_toast">Обновление метаданных...</string>
+    <string name="change_thumbnail">Change album cover</string>
+    <string name="delete_thumbnail">Remove custom album cover</string>
+    <string name="settings_theme">Themes</string>
+    <string name="settings_theme_summary">Customise your media gallery</string>
+    <string name="customization_summary">Optmise the app to your own preferences</string>
+    <string name="settings_misc">Miscellaneous</string>
+    <string name="settings_misc_summary">Various uncategorised settings</string>
+    <string name="settings_general_summary">Various general settings</string>
+    <string name="ai_category_summary">Control what Smart Features you want to use</string>
+    <string name="video_playback">Video Playback</string>
+    <string name="interface_settings">Interface</string>
+    <string name="show_date_header">Show Media Date Header</string>
+    <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
+    <string name="show_selection_titles">Display Selection Item\'s Title</string>
+    <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
+    <string name="extended_date_header_title">Extended Date Header</string>
+    <string name="clear_selection">Remove All</string>
+    <string name="selfies">Selfies</string>
+    <string name="screenshots">Screenshots</string>
+    <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
+    <string name="suggestions">Suggestions</string>
     <plurals name="item_count">
         <item quantity="one">%s элемент</item>
         <item quantity="few">%s эл.</item>
