--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -322,6 +322,44 @@
     <string name="create_new_vault_title">Створити новий сейф?</string>
     <string name="create_new_vault_summary">Доступ до сейфа буде здійснюватися за допомогою заходів безпеки вашого телефону (пароль або біометричні дані)\n\nКлюч шифрування доступний всередині сховища і використовуватиметься для відновлення будь-яких сейфів.</string>
     <string name="select_a_vault">Виберіть сейф</string>
+    <string name="taken_on">Знято</string>
+    <string name="resolution">Роздільність</string>
+    <string name="dimensions">Розміри</string>
+    <string name="duration">Тривалість</string>
+    <string name="frame_rate">Частота кадрів</string>
+    <string name="bitrate">Бітрейт</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s МП</string>
+    <string name="ppi">пк / дюйм</string>
+    <string name="ppcm">пк / см</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">"зі швидкістю %1$s"</string>
+    <string name="video_fps">%.1f к / с</string>
+    <string name="collecting_metadata">Збір метаданих...</string>
+    <string name="database">База даних</string>
+    <string name="refresh_metadata">Оновити метадані</string>
+    <string name="refresh_metadata_summary">Якщо щось не так, оновіть усі метадані збережених медіафайлів</string>
+    <string name="metadata_refresh_toast">Оновлення метаданих...</string>
+    <string name="change_thumbnail">Change album cover</string>
+    <string name="delete_thumbnail">Remove custom album cover</string>
+    <string name="settings_theme">Themes</string>
+    <string name="settings_theme_summary">Customise your media gallery</string>
+    <string name="customization_summary">Optmise the app to your own preferences</string>
+    <string name="settings_misc">Miscellaneous</string>
+    <string name="settings_misc_summary">Various uncategorised settings</string>
+    <string name="settings_general_summary">Various general settings</string>
+    <string name="ai_category_summary">Control what Smart Features you want to use</string>
+    <string name="video_playback">Video Playback</string>
+    <string name="interface_settings">Interface</string>
+    <string name="show_date_header">Show Media Date Header</string>
+    <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
+    <string name="show_selection_titles">Display Selection Item\'s Title</string>
+    <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
+    <string name="extended_date_header_title">Extended Date Header</string>
+    <string name="clear_selection">Remove All</string>
+    <string name="selfies">Selfies</string>
+    <string name="screenshots">Screenshots</string>
+    <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
+    <string name="suggestions">Suggestions</string>
     <plurals name="item_count">
         <item quantity="one">%s елемент</item>
         <item quantity="few">%s елементи</item>
