--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -196,13 +196,13 @@
     <string name="setup_ignored_albums">Thêm vào album bị bỏ qua</string>
     <string name="individual_album_selection">Lựa chọn Album riêng lẻ</string>
     <string name="wildcard_creator">Trình tạo ký tự đại diện</string>
-    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
-    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
+    <string name="wildcard_summary">Ký tự đại diện sẽ được sử dụng để khớp với tên album hoặc đường dẫn của chúng.\nKý tự đại diện có thể được coi như một mẫu biểu thức chính quy.</string>
+    <string name="wildcard_summary_first">Ký tự đại diện: %1$s\nAlbum khớp: %2$s</string>
     <string name="matched_albums">"Album phù hợp: %1$s"</string>
     <string name="go_back">Quay đầu</string>
     <string name="continue_string">Tiếp tục</string>
     <string name="apply">Áp dụng</string>
-    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
+    <string name="setup_label_info">Chọn những album mà bạn không muốn thấy trong Dòng thời gian chính, trong tab Album hoặc cả hai.\n\nBạn có thể chọn từng album hoặc tạo Mẫu biểu thức chính quy để tự động ẩn bất kỳ album nào.</string>
     <string name="setup_label_input">Nhãn</string>
     <string name="setup_label_placeholder">Đặt nhãn của bạn</string>
     <string name="setup_label_title">Album đã bỏ qua</string>
@@ -215,7 +215,7 @@
     <string name="setup_location_options_timeline">Dòng thời gian</string>
     <string name="setup_location_options_both">Cả hai</string>
     <string name="setup_location_type_title">Ai nên bị bỏ qua</string>
-    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
+    <string name="setup_location_type_subtitle">Bạn có thể chọn một album duy nhất hoặc tạo một mẫu Regex để khớp với nhiều album</string>
     <string name="setup_location_types_selection">Selection</string>
     <string name="setup_location_types_regex">Regex Pattern</string>
     <string name="setup_type_selection_title">Selection</string>
@@ -257,7 +257,7 @@
     <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
     <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
     <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
-    <string name="ignored">Ignored</string>
+    <string name="ignored">Bị bỏ qua</string>
     <string name="location">Location</string>
     <string name="update_file_name">Update file name</string>
     <string name="support_the_project">Support the project</string>
@@ -322,6 +322,44 @@
     <string name="create_new_vault_title">Create new vault?</string>
     <string name="create_new_vault_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
     <string name="select_a_vault">Select a vault</string>
+    <string name="taken_on">Taken on</string>
+    <string name="resolution">Resolution</string>
+    <string name="dimensions">Dimensions</string>
+    <string name="duration">Duration</string>
+    <string name="frame_rate">Frame Rate</string>
+    <string name="bitrate">Bitrate</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s MP</string>
+    <string name="ppi">PPI</string>
+    <string name="ppcm">PPCM</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">" at %1$s"</string>
+    <string name="video_fps">%.1f fps</string>
+    <string name="collecting_metadata">Collecting metadata...</string>
+    <string name="database">Database</string>
+    <string name="refresh_metadata">Refresh Metadata</string>
+    <string name="refresh_metadata_summary">If something feels wrong, refresh all stored media metadata</string>
+    <string name="metadata_refresh_toast">Refreshing metadata...</string>
+    <string name="change_thumbnail">Change album cover</string>
+    <string name="delete_thumbnail">Remove custom album cover</string>
+    <string name="settings_theme">Themes</string>
+    <string name="settings_theme_summary">Customise your media gallery</string>
+    <string name="customization_summary">Optmise the app to your own preferences</string>
+    <string name="settings_misc">Miscellaneous</string>
+    <string name="settings_misc_summary">Various uncategorised settings</string>
+    <string name="settings_general_summary">Various general settings</string>
+    <string name="ai_category_summary">Control what Smart Features you want to use</string>
+    <string name="video_playback">Video Playback</string>
+    <string name="interface_settings">Interface</string>
+    <string name="show_date_header">Show Media Date Header</string>
+    <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
+    <string name="show_selection_titles">Display Selection Item\'s Title</string>
+    <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
+    <string name="extended_date_header_title">Extended Date Header</string>
+    <string name="clear_selection">Remove All</string>
+    <string name="selfies">Selfies</string>
+    <string name="screenshots">Screenshots</string>
+    <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
+    <string name="suggestions">Suggestions</string>
     <plurals name="item_count">
         <item quantity="other">%s mục</item>
     </plurals>
