--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -322,6 +322,44 @@
     <string name="create_new_vault_title">建立新私密空間？</string>
     <string name="create_new_vault_summary">私密空間將透過您的手機安全措施（密碼或生物辨識）存取。\n\n加密金鑰可在私密空間內取得，並用於還原任何私密空間。</string>
     <string name="select_a_vault">選擇私密空間</string>
+    <string name="taken_on">裝置</string>
+    <string name="resolution">解析度</string>
+    <string name="dimensions">尺寸</string>
+    <string name="duration">長度</string>
+    <string name="frame_rate">影格速率</string>
+    <string name="bitrate">位元速率</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s 百萬畫素</string>
+    <string name="ppi">PPI</string>
+    <string name="ppcm">PPCM</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">" 在 %1$s"</string>
+    <string name="video_fps">%.1f fps</string>
+    <string name="collecting_metadata">收集資訊...</string>
+    <string name="database">資料庫</string>
+    <string name="refresh_metadata">重新載入資訊</string>
+    <string name="refresh_metadata_summary">若發生問題，請重新載入所有媒體資訊</string>
+    <string name="metadata_refresh_toast">正在重新載入資訊...</string>
+    <string name="change_thumbnail">更改相簿封面</string>
+    <string name="delete_thumbnail">刪除自訂相簿封面</string>
+    <string name="settings_theme">主題</string>
+    <string name="settings_theme_summary">自訂您的媒體庫</string>
+    <string name="customization_summary">根據您自己的偏好優化應用程式</string>
+    <string name="settings_misc">其他</string>
+    <string name="settings_misc_summary">各種未分類的設置</string>
+    <string name="settings_general_summary">各種常規設定</string>
+    <string name="ai_category_summary">控制您想要使用的智慧功能</string>
+    <string name="video_playback">影片播放</string>
+    <string name="interface_settings">介面</string>
+    <string name="show_date_header">顯示媒體日期標題</string>
+    <string name="show_date_header_summary">在媒體視圖頂欄標題中顯示媒體日期。</string>
+    <string name="show_selection_titles">顯示選擇項的標題</string>
+    <string name="show_selection_titles_summary">在選擇表中顯示每個操作的標題</string>
+    <string name="extended_date_header_title">擴展日期標題</string>
+    <string name="clear_selection">全部刪除</string>
+    <string name="selfies">自拍</string>
+    <string name="screenshots">截圖</string>
+    <string name="search_images_videos"><![CDATA[搜尋圖片和影片]]></string>
+    <string name="suggestions">建議</string>
     <plurals name="item_count">
         <item quantity="other">%s 個項目</item>
     </plurals>
