--- a/app/src/main/res/values-el-rGR/strings.xml
+++ b/app/src/main/res/values-el-rGR/strings.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
+    <string name="app_name">Συλλογή</string>
+    <string name="nav_albums">Άλμπουμ</string>
+    <string name="searchbar_title"><![CDATA[Αναζήτηση φωτογραφιών & βίντεο]]></string>
+    <string name="header_today">Σήμερα</string>
+    <string name="header_yesterday">Χθες</string>
+    <string name="request_permissions">Αίτηση αδειών</string>
+    <string name="filter">Φίλτρο</string>
+    <string name="filter_recent">Πρόσφατα</string>
+    <string name="filter_nameAZ">Όνομα (Α-Ω)</string>
+    <string name="filter_nameZA">Όνομα (Ω-Α)</string>
+    <string name="filter_old">Παλαιότερα</string>
+    <string name="selected_s">Επιλεγμένα %s</string>
+    <string name="trash">Απορρίμματα</string>
+    <string name="pause_video">Παύση βίντεο</string>
+    <string name="play_video">Αναπαραγωγή βίντεο</string>
+    <string name="favorites">Αγαπημένα</string>
+    <string name="no_media_title">Φαίνεται άδειο εδώ πέρα</string>
+    <string name="no_media_cd">Δεν βρέθηκαν πολυμέσα</string>
+    <string name="empty_trash_title">Ολοκάθαρα</string>
+    <string name="empty_trash_cd">Ο κάδος είναι άδειος</string>
+    <string name="error_title">Κάτι πήγε στραβά :(</string>
+    <string name="error_cd">Παρουσιάστηκε σφάλμα</string>
+    <string name="copy_error">Σφάλμα αντιγραφής</string>
+    <string name="trash_restore">Επαναφορά</string>
     <string name="trash_empty">Empty</string>
     <string name="trash_delete">Delete</string>
     <string name="share">Share</string>
@@ -322,6 +322,44 @@
     <string name="create_new_vault_title">Create new vault?</string>
     <string name="create_new_vault_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
     <string name="select_a_vault">Select a vault</string>
+    <string name="taken_on">Taken on</string>
+    <string name="resolution">Resolution</string>
+    <string name="dimensions">Dimensions</string>
+    <string name="duration">Duration</string>
+    <string name="frame_rate">Frame Rate</string>
+    <string name="bitrate">Bitrate</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s MP</string>
+    <string name="ppi">PPI</string>
+    <string name="ppcm">PPCM</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">" at %1$s"</string>
+    <string name="video_fps">%.1f fps</string>
+    <string name="collecting_metadata">Collecting metadata...</string>
+    <string name="database">Database</string>
+    <string name="refresh_metadata">Refresh Metadata</string>
+    <string name="refresh_metadata_summary">If something feels wrong, refresh all stored media metadata</string>
+    <string name="metadata_refresh_toast">Refreshing metadata...</string>
+    <string name="change_thumbnail">Change album cover</string>
+    <string name="delete_thumbnail">Remove custom album cover</string>
+    <string name="settings_theme">Themes</string>
+    <string name="settings_theme_summary">Customise your media gallery</string>
+    <string name="customization_summary">Optmise the app to your own preferences</string>
+    <string name="settings_misc">Miscellaneous</string>
+    <string name="settings_misc_summary">Various uncategorised settings</string>
+    <string name="settings_general_summary">Various general settings</string>
+    <string name="ai_category_summary">Control what Smart Features you want to use</string>
+    <string name="video_playback">Video Playback</string>
+    <string name="interface_settings">Interface</string>
+    <string name="show_date_header">Show Media Date Header</string>
+    <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
+    <string name="show_selection_titles">Display Selection Item\'s Title</string>
+    <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
+    <string name="extended_date_header_title">Extended Date Header</string>
+    <string name="clear_selection">Remove All</string>
+    <string name="selfies">Selfies</string>
+    <string name="screenshots">Screenshots</string>
+    <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
+    <string name="suggestions">Suggestions</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
