--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -322,6 +322,44 @@
     <string name="create_new_vault_title">Créer un nouveau coffre ?</string>
     <string name="create_new_vault_summary">L\'accès au coffre se fera par le biais des mesures de sécurité de votre téléphone (mot de passe ou données biométriques).\n\nLa clé de chiffrement est accessible à l\'intérieur du coffre et sera utilisée pour restaurer les coffres.</string>
     <string name="select_a_vault">Sélectionner un coffre</string>
+    <string name="taken_on">Prise le</string>
+    <string name="resolution">Résolution</string>
+    <string name="dimensions">Dimensions</string>
+    <string name="duration">Durée</string>
+    <string name="frame_rate">Taux de rafraîchissement</string>
+    <string name="bitrate">Débit</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s MP</string>
+    <string name="ppi">PPP</string>
+    <string name="ppcm">PPCM</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">" à %1$s"</string>
+    <string name="video_fps">%.1f ips</string>
+    <string name="collecting_metadata">Collecte de métadonnées...</string>
+    <string name="database">Base de données</string>
+    <string name="refresh_metadata">Actualiser les métadonnées</string>
+    <string name="refresh_metadata_summary">Si quelque chose ne va pas, rafraîchissez toutes les métadonnées des médias stockés</string>
+    <string name="metadata_refresh_toast">Actualisation des métadonnées...</string>
+    <string name="change_thumbnail">Change album cover</string>
+    <string name="delete_thumbnail">Remove custom album cover</string>
+    <string name="settings_theme">Themes</string>
+    <string name="settings_theme_summary">Customise your media gallery</string>
+    <string name="customization_summary">Optmise the app to your own preferences</string>
+    <string name="settings_misc">Miscellaneous</string>
+    <string name="settings_misc_summary">Various uncategorised settings</string>
+    <string name="settings_general_summary">Various general settings</string>
+    <string name="ai_category_summary">Control what Smart Features you want to use</string>
+    <string name="video_playback">Video Playback</string>
+    <string name="interface_settings">Interface</string>
+    <string name="show_date_header">Show Media Date Header</string>
+    <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
+    <string name="show_selection_titles">Display Selection Item\'s Title</string>
+    <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
+    <string name="extended_date_header_title">Extended Date Header</string>
+    <string name="clear_selection">Remove All</string>
+    <string name="selfies">Selfies</string>
+    <string name="screenshots">Screenshots</string>
+    <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
+    <string name="suggestions">Suggestions</string>
     <plurals name="item_count">
         <item quantity="one">%s élément</item>
         <item quantity="other">%s éléments</item>
