--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -18,7 +18,7 @@
     <string name="favorites">Preferiti</string>
     <string name="no_media_title">Sembra che non ci sia niente qui</string>
     <string name="no_media_cd">Nessun contenuto multimediale trovato</string>
-    <string name="empty_trash_title">Lindo e pinto</string>
+    <string name="empty_trash_title">Pulito come uno specchio</string>
     <string name="empty_trash_cd">Il cestino è vuoto</string>
     <string name="error_title">Qualcosa è andato storto :(</string>
     <string name="error_cd">Si è verificato un errore</string>
@@ -322,6 +322,44 @@
     <string name="create_new_vault_title">Vuoi creare un nuovo archivio?</string>
     <string name="create_new_vault_summary">Sarà fatto l\'accesso all\'archivio usando le misure di sicurezza del tuo telefono (password o biometria)\n\nPuoi accedere alla chiave di codifica nell\'archivio e puoi usarla per ripristinare qualunque archivio.</string>
     <string name="select_a_vault">Seleziona un archivio</string>
+    <string name="taken_on">Scattata il</string>
+    <string name="resolution">Risoluzione</string>
+    <string name="dimensions">Dimensioni</string>
+    <string name="duration">Durata</string>
+    <string name="frame_rate">Frequenza fotogrammi</string>
+    <string name="bitrate">Bitrate</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s MP</string>
+    <string name="ppi">PPI</string>
+    <string name="ppcm">PPCM</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">" at %1$s"</string>
+    <string name="video_fps">%.1f fps</string>
+    <string name="collecting_metadata">Analisi metadati in corso...</string>
+    <string name="database">Database</string>
+    <string name="refresh_metadata">Aggiorna metadati</string>
+    <string name="refresh_metadata_summary">Qualcosa non torna? Aggiorna i metadati dei file salvati</string>
+    <string name="metadata_refresh_toast">Aggiorno i dati dei tuoi media...</string>
+    <string name="change_thumbnail">Change album cover</string>
+    <string name="delete_thumbnail">Remove custom album cover</string>
+    <string name="settings_theme">Themes</string>
+    <string name="settings_theme_summary">Customise your media gallery</string>
+    <string name="customization_summary">Optmise the app to your own preferences</string>
+    <string name="settings_misc">Miscellaneous</string>
+    <string name="settings_misc_summary">Various uncategorised settings</string>
+    <string name="settings_general_summary">Various general settings</string>
+    <string name="ai_category_summary">Control what Smart Features you want to use</string>
+    <string name="video_playback">Video Playback</string>
+    <string name="interface_settings">Interface</string>
+    <string name="show_date_header">Show Media Date Header</string>
+    <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
+    <string name="show_selection_titles">Display Selection Item\'s Title</string>
+    <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
+    <string name="extended_date_header_title">Extended Date Header</string>
+    <string name="clear_selection">Remove All</string>
+    <string name="selfies">Selfies</string>
+    <string name="screenshots">Screenshots</string>
+    <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
+    <string name="suggestions">Suggestions</string>
     <plurals name="item_count">
         <item quantity="one">%s elemento</item>
         <item quantity="other">%s elementi</item>
