--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -24,7 +24,7 @@
     <string name="error_cd">Wystąpił błąd</string>
     <string name="copy_error">Skopiuj błąd</string>
     <string name="trash_restore">Przywróć</string>
-    <string name="trash_empty">Pusty</string>
+    <string name="trash_empty">Opróżnij</string>
     <string name="trash_delete">Usuń</string>
     <string name="share">Udostępnij</string>
     <string name="remove_selected">Usuń wybrane</string>
@@ -322,6 +322,44 @@
     <string name="create_new_vault_title">Utworzyć nowy sejf?</string>
     <string name="create_new_vault_summary">Do sejfu można się dostać używając zabezpieczeń telefonu (hasło lub biometria)\n\nKlucz szyfrujący można znaleźć wewnątrz sejfu i można go użyć, aby odzyskać dowolny sejf.</string>
     <string name="select_a_vault">Wybierz sejf</string>
+    <string name="taken_on">Taken on</string>
+    <string name="resolution">Rozdzielczość</string>
+    <string name="dimensions">Dimensions</string>
+    <string name="duration">Duration</string>
+    <string name="frame_rate">Frame Rate</string>
+    <string name="bitrate">Bitrate</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s MP</string>
+    <string name="ppi">PPI</string>
+    <string name="ppcm">PPCM</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">" at %1$s"</string>
+    <string name="video_fps">%.1f fps</string>
+    <string name="collecting_metadata">Zbieranie metadanych...</string>
+    <string name="database">Baza danych</string>
+    <string name="refresh_metadata">Odśwież metadane</string>
+    <string name="refresh_metadata_summary">Jeśli coś jest nie tak, odśwież wszystkie zapisane metadane multimediów</string>
+    <string name="metadata_refresh_toast">Odświeżanie metadanych...</string>
+    <string name="change_thumbnail">Change album cover</string>
+    <string name="delete_thumbnail">Remove custom album cover</string>
+    <string name="settings_theme">Themes</string>
+    <string name="settings_theme_summary">Customise your media gallery</string>
+    <string name="customization_summary">Optmise the app to your own preferences</string>
+    <string name="settings_misc">Miscellaneous</string>
+    <string name="settings_misc_summary">Various uncategorised settings</string>
+    <string name="settings_general_summary">Various general settings</string>
+    <string name="ai_category_summary">Control what Smart Features you want to use</string>
+    <string name="video_playback">Video Playback</string>
+    <string name="interface_settings">Interface</string>
+    <string name="show_date_header">Show Media Date Header</string>
+    <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
+    <string name="show_selection_titles">Display Selection Item\'s Title</string>
+    <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
+    <string name="extended_date_header_title">Extended Date Header</string>
+    <string name="clear_selection">Remove All</string>
+    <string name="selfies">Selfies</string>
+    <string name="screenshots">Screenshots</string>
+    <string name="search_images_videos"><![CDATA[Search images & videos]]></string>
+    <string name="suggestions">Suggestions</string>
     <plurals name="item_count">
         <item quantity="one">%s pozycja</item>
         <item quantity="few">%s pozycji</item>
