--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -322,6 +322,44 @@
     <string name="create_new_vault_title">创建新的私密空间？</string>
     <string name="create_new_vault_summary">保险库将通过您的手机安全措施（密码或生物识别）进行访问。\n\n加密密钥可以在保险库内部获取，并用于恢复任何保险库。</string>
     <string name="select_a_vault">请选择私密空间</string>
+    <string name="taken_on">拍摄时间</string>
+    <string name="resolution">分辨率</string>
+    <string name="dimensions">尺寸</string>
+    <string name="duration">时长</string>
+    <string name="frame_rate">帧率</string>
+    <string name="bitrate">码率</string>
+    <string name="resolution_with_mp">%1$d × %2$d • %3$s MP</string>
+    <string name="ppi">PPI</string>
+    <string name="ppcm">PPCM</string>
+    <string name="ppi_resolution_string">" • %.1f × %.1f %s"</string>
+    <string name="at_kbps">" @ %1$s"</string>
+    <string name="video_fps">%.1f fps</string>
+    <string name="collecting_metadata">收集元数据中…</string>
+    <string name="database">数据库</string>
+    <string name="refresh_metadata">刷新元数据</string>
+    <string name="refresh_metadata_summary">如果觉得有问题，刷新所有存储的媒体元数据</string>
+    <string name="metadata_refresh_toast">刷新元数据中…</string>
+    <string name="change_thumbnail">更改相册封面</string>
+    <string name="delete_thumbnail">移除自定义相册封面</string>
+    <string name="settings_theme">主题</string>
+    <string name="settings_theme_summary">自定义您的媒体库</string>
+    <string name="customization_summary">根据您的偏好优化应用</string>
+    <string name="settings_misc">其他</string>
+    <string name="settings_misc_summary">各种未分类的设置</string>
+    <string name="settings_general_summary">各种通用设置</string>
+    <string name="ai_category_summary">控制您想使用的智能功能</string>
+    <string name="video_playback">视频播放</string>
+    <string name="interface_settings">界面</string>
+    <string name="show_date_header">显示媒体日期标题</string>
+    <string name="show_date_header_summary">在媒体视图顶部栏标题中显示媒体日期。</string>
+    <string name="show_selection_titles">显示选择项的标题</string>
+    <string name="show_selection_titles_summary">在选择表中显示每个操作的标题</string>
+    <string name="extended_date_header_title">扩展日期标题</string>
+    <string name="clear_selection">全部移除</string>
+    <string name="selfies">自拍</string>
+    <string name="screenshots">截图</string>
+    <string name="search_images_videos"><![CDATA[搜索图片和视频]]></string>
+    <string name="suggestions">建议</string>
     <plurals name="item_count">
         <item quantity="other">%s 个项目</item>
     </plurals>
